--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
+
+    <header class="Header">
+        <div class="Header-wrapper Wrapper">
+            <section class="Header-left">
+                <div class="Header-logo">
+                    <a href="#" class="Header-a"><img src="assets/img/logo-stck.png" alt="STCK" class="Header-img"></a>
+                </div>
+            </section>
+
+            <nav class="Header-nav">
+                <ul class="Header-ul">
+                    <li class="Header-li">Home</li>
+                    <li class="Header-li">About</li>
+                    <li class="Header-li">Contact</li>
+                    <li class="Header-li">Events</li>
+                    <li class="Header-li"> Artists</li>
+                </ul>
+            </nav>
+
+            <div class="Header-right">
+                <span class="Header-span">
+                    <a href="#" class="Header-link">Get tickets</a>
+                </span>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
