--- a/index.html
+++ b/index.html
@@ -34,7 +34,17 @@
     </header>
     
     <main class="Main">
-        
+        <div class="Main-digital Digital">
+            <section class="Digital-wrapper Wrapper">
+                <h2 class="Digital-h2">
+                    <img src="assets/img/h2-logo.png" alt="Digital Art" class="Digital-img">
+                </h2>
+                <div class="Digital-dates Dates">
+                    <p class="Digital-p">15 September 2020</p>
+                    <p class="Digital-p Dates-april">15 April 2021</p>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
 </html>
