--- a/index.html
+++ b/index.html
@@ -97,6 +97,42 @@
                 </ul>
             </section>
 
+            <div class="Main-wrapper Wrapper">
+                <section class="Main-programs Programs">
+                    <h2 class="Programs-h2">Programs</h2>
+                    <div class="Programs-container">
+                        <section class="Programs-row">
+                            <div class="Programs-schedule">
+                                <span class="Programs-span">15 September</span>
+                                <span class="Programs-span">18h-23h</span>
+                            </div>
+                            <h3 class="Programs-h3">Art and science meets today stockholm</h3>
+                            <span class="Programs-btn"><a href="#" class="Programs-a">Get tickets</a></span>
+                        </section>
+
+                        <section class="Programs-row">
+                            <div class="Programs-schedule">
+                                <span class="Programs-span">16 October</span>
+                                <span class="Programs-span">18h-23h</span>
+                            </div>
+                            <h3 class="Programs-h3">Artist talk: eric daniels and alan curtis</h3>
+                            <span class="Programs-btn"><a href="#" class="Programs-a">Get tickets</a></span>
+                        </section>
+
+                        <section class="Programs-row">
+                            <div class="Programs-schedule">
+                                <span class="Programs-span">14 November</span>
+                                <span class="Programs-span">18h-23h</span>
+                            </div>
+                            <h3 class="Programs-h3">Art and science meets today stockholm</h3>
+                            <span class="Programs-btn"><a href="#" class="Programs-a">Get tickets</a></span>
+                        </section>
+                    </div>
+                    
+
+                </section>
+            </div>
+
     </main>
 </body>
 </html>
