--- a/index.html
+++ b/index.html
@@ -133,6 +133,19 @@
                 </section>
             </div>
 
+            <div class="Main-maps Maps">
+                <section class="Maps-section">
+                    <h3 class="Maps-h3">National Gallery</h3>
+                    <p class="Maps-p">address: New York, NY 10013</p>
+                    <img src="#" alt="Mapa" class="Maps-img">
+                </section>
+                <section class="Maps-section">
+                    <h3 class="Maps-h3">City library</h3>
+                    <p class="Maps-p">address: New York, NY 10013</p>
+                    <img src="#" alt="Mapa" class="Maps-img">
+                </section>
+            </div>
+
     </main>
 </body>
 </html>
